# mongotest

./: CMakeLists  CMakeLists.txt  main.cpp
exec/: CMakeCache.txt  Makefile  cmake_install.cmake
